fix text alignment issue

--- a/src/sass/components/_form.scss
+++ b/src/sass/components/_form.scss
@@ -1,8 +1,10 @@
 .form {
+    text-align: center;
+    
     &--center {
         @include absPosition;
     }
-
+    
     &__group {
         display: flex;
         align-items: center;
